# rust-pong

./: .gitignore  Cargo.toml  Makefile.toml  readme.md
.bin/: .env.example  configure  pre-commit
.github/: contributing.md
.github/workflows/: main.yaml
src/: ball.rs  client.rs  connection.rs  front.rs  interface.rs  logger.rs  player.rs  process.rs  server.rs
web-root/: index.html
